<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calcolapizza</string>
    <string name="panielli">Numero panielli</string>
    <string name="pesoPanielli">Peso panielli (gr)</string>
    <string name="idro">Idratazione desiderata</string>
    <string name="sale">Sale per litro d\'acqua</string>
    <string name="oreLievitazione">Ore di lievitazione totali..</string>
    <string name="frigo">..di cui in frigo</string>
    <string name="temperatura">Temperatura ambiente (°C)</string>
    <string name="grassi">Olio/strutto/burro (gr/l)</string>
    <string name="pdr">Pasta di riporto (%)</string>
    <string name="tipologiaPdr">Tipologia pasta di riporto</string>
    <string name="calcola">CALCOLA</string>
    <string name="acqua">Acqua</string>
    <string name="farina">Farina</string>
    <string name="sale_res">Sale</string>
    <string name="olio_strutto_burro">Olio/Strutto/Burro</string>
    <string name="pasta_di_riporto">Pasta di riporto</string>
    <string name="lievito">Lievito di birra fresco</string>
    <string name="screenshot">Salva Screenshot</string>
    <string name="pizza_in_teglia">Pizza in teglia?</string>
    <string name="calcolapizza">Calcola pizza</string>
    <string name="calcolamix">Calcola mix</string>
    <string name="condividi">Salva e condividi</string>
    <string-array name="pdr_array">
        <item>Stanca</item>
        <item>Normale</item>
        <item>Vivace</item>
    </string-array>
</resources>
