<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context="com.domore.calcolapizza.MainActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/panielli"
            android:labelFor="@id/panielli"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/pesoPanielli"
            android:labelFor="@id/pesoPanielli"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/panielli"
            android:nextFocusDown="@id/pesoPanielli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number" />
        <EditText
            android:id="@+id/pesoPanielli"
            android:nextFocusDown="@id/idro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/idro"
            android:labelFor="@id/idro"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/sale"
            android:labelFor="@id/sale"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/idro"
            android:nextFocusDown="@id/sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal" />
        <EditText
            android:id="@+id/sale"
            android:nextFocusDown="@id/oreLievitazione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/oreLievitazione"
            android:labelFor="@id/oreLievitazione"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/frigo"
            android:labelFor="@id/frigo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/oreLievitazione"
            android:nextFocusDown="@id/frigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal" />
        <EditText
            android:id="@+id/frigo"
            android:nextFocusDown="@id/temperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/temperatura"
            android:labelFor="@id/temperatura"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/grassi"
            android:labelFor="@id/grassi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/temperatura"
            android:nextFocusDown="@id/grassi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal" />
        <EditText
            android:id="@+id/grassi"
            android:nextFocusDown="@id/pdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/pdr"
            android:labelFor="@id/pdr"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:text="@string/tipologiaPdr"
            android:labelFor="@id/grassi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/pdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/pdr_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />


    </LinearLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizza_in_teglia" />
200
        <Button
            android:id="@+id/btn_calcola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/calcola"/>

</LinearLayout>

</ScrollView>